Add more unit_specialities